--- a/finalproject.html
+++ b/finalproject.html
@@ -15,6 +15,8 @@
 			}
 		</script>
 		<div id="welcMessage">Welcome to the Whippoorwill Book Club! <button onclick="document.getElementById('welcMessage').style.display='none';">Dismiss &#129668;</button></div>
+		background-image: url("images/LogoWhippoorwillBookClub.png");
+		background-color: #white;
 		<main id="main-content">
     		<article>
       			<header>
