--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -42,7 +42,7 @@
 					</nav>
 					<p>Looking for your next read, friends to read with something</p>
 					<figure class="header-catandbooks">
-						<img alt="Cartoon drawing of a content cat sitting on a book shelf in soothing colors." src="images/catandbooks.jpg">
+						<img alt="Cartoon drawing of a content cat sitting on a book shelf in soothing colors." src="images/catandbooksdrawing.jpg">
 					</figure>
 					<p>We offer items for adults and children. Prices start from $0.25 to $1, and there are Sunday specials. 100% of your purchase goes to the library. We are conveniently located at the <a href="#roommap" alt="go to map of sale rooms">Cubberley Community Center</a>. Hours vary by sale room, but all rooms are open <span style="color: blue;">11AM-4PM SAT & 1PM-4PM SUN</span></p>
 					<p>Our friendly sales people will help you find treasures in the stacks without sales tax. Need a present? Our gift certificates are available in $5.00 denominations. You can find more information about the <a href="#mainsaleinfo" alt="go to main sale info">Main sale</a>, <a href="#childrensaleinfo" alt="go to children's sale info">Children's sale</a>, and <a href="#bargainsaleinfo" alt="go to bargain sale info">Bargain sale</a> by clicking the links</p>
