--- a/finalproject.html
+++ b/finalproject.html
@@ -19,6 +19,9 @@
     		<article>
       			<header>
 					<h1 id="mainpage-title">The Whippoorwill Book Club</h1>
+					<figure class="LogoWBC">
+						<img alt="Whippoorwill logo for the book club." src="images/LogoWBCReduced.png">
+					</figure>figure>
 					<h2 id="mainpage-subtitle">Reading, conversation, and commraderie at the library</h2>
 					<!--<p>Posted by: WBC</p>-->
 					<nav>
