--- a/finalproject.html
+++ b/finalproject.html
@@ -20,7 +20,8 @@
       			<header>
 					<h1 id="mainpage-title">The Whippoorwill Book Club</h1>
 					<figure class="LogoWBC">
-						<img alt="Whippoorwill logo for the book club." src="images/LogoWBCReduced.png">
+						<img alt="Whippoorwill logo for the book club." src="images/LogoWBCReduced.PNG">
+						<!--<img alt="Whippoorwill logo for the book club." src="images/LogoWhippoorwillBookClub.png">-->
 					</figure>
 					<h2 id="mainpage-subtitle">Reading, conversation, and commraderie at the library</h2>
 					<!--<p>Posted by: WBC</p>-->
