--- a/finalproject.html
+++ b/finalproject.html
@@ -18,11 +18,15 @@
 		<main id="main-content">
     		<article>
       			<header>
-					<figure class="LogoWBC">
+					<div class="header">
+  						<img src="images/LogoWBCReduced.png" alt="Book club logo simple bird in a circle" />
+  						<h1 id="mainpage-title">The Whippoorwill Book Club</h1>
+					</div>
+					<!--<figure class="LogoWBC">
 						<img alt="Whippoorwill logo for the book club." src="images/LogoWBCReduced.PNG">
 						<!--<img alt="Whippoorwill logo for the book club." src="images/LogoWhippoorwillBookClub.png">-->
 					</figure>
-					<h1 id="mainpage-title">The Whippoorwill Book Club</h1>
+					<h1 id="mainpage-title">The Whippoorwill Book Club</h1>-->
 					<h2 id="mainpage-subtitle">Reading, conversation, and commraderie at the library</h2>
 					<!--<p>Posted by: WBC</p>-->
 					<nav>
