--- a/finalproject.html
+++ b/finalproject.html
@@ -24,8 +24,8 @@
 					</div>
 					<!--<figure class="LogoWBC">
 						<img alt="Whippoorwill logo for the book club." src="images/LogoWBCReduced.PNG">
-						<!--<img alt="Whippoorwill logo for the book club." src="images/LogoWhippoorwillBookClub.png">-->
-					</figure>
+						<!--<img alt="Whippoorwill logo for the book club." src="images/LogoWhippoorwillBookClub.png">
+					</figure>-->
 					<h1 id="mainpage-title">The Whippoorwill Book Club</h1>-->
 					<h2 id="mainpage-subtitle">Reading, conversation, and commraderie at the library</h2>
 					<!--<p>Posted by: WBC</p>-->
