--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -27,7 +27,7 @@
 								<a href="#aboutpage-title" alt="refresh the page">Home</a>
 							</li>
 							<li class="menu-items-opt">
-								<a href="finalproject.html" alt="go to the about us page">Book Club Main</a>
+								<a href="finalproject.html" alt="go to the Whippoorwill Book Club main page">Book Club Main</a>
 							</li>
 							<li class="menu-items-opt">
 								<a href="greatesthitspage.html" alt="go to the greatest hits page">Greatest hits</a>
@@ -80,7 +80,7 @@ Our volunteers conduct monthly and online sales of books and other media donated
 		<footer id="page-footer">
 			<nav>
 				<ul> <!--can add classes here later-->
-					<li><a href="#mainpage-title" alt="go to the top of the page">Home</a></li>
+					<li><a href="#aboutuspage-title" alt="go to the top of the page">Home</a></li>
 					<li><a href="https://www.ebay.com/str/friendsofthepaloaltolibrary" alt="go to the Friends of the Palo Alto Library eBay shop">Shop select books</a></li>
 					<li><a href="https://www.discogs.com/user/FOPAL" alt="go to the Friends of the Palo Alto Library Discogs shop">Shop select music</a></li>
 					<li><a href="https://www.fopal.org/contact" alt="go to the Friends of the Palo Alto Library contact page">Contact us</a></li>
