--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -14,7 +14,7 @@
   				document.body.classList.toggle('dark-mode');
 			}
 		</script>
-		<div id="welcMessage">Welcome to the Whippoorwill Book Club About Us page! <button onclick="document.getElementById('welcMessage').style.display='none';">Dismiss &#129668;</button></div>
+		<div id="welcMessage">Welcome to the WBC About Us page! <button onclick="document.getElementById('welcMessage').style.display='none';">Dismiss &#129668;</button></div>
 		<main id="main-content">
     		<article>
       			<header>
