--- a/greatesthitspage.html
+++ b/greatesthitspage.html
@@ -14,7 +14,7 @@
   				document.body.classList.toggle('dark-mode');
 			}
 		</script>
-		<div id="welcMessage">Welcome to the Whippoorwill Book Club Greatest Hits page! <button onclick="document.getElementById('welcMessage').style.display='none';">Dismiss &#129668;</button></div>
+		<div id="welcMessage">Welcome to the WBC Greatest Hits page! <button onclick="document.getElementById('welcMessage').style.display='none';">Dismiss &#129668;</button></div>
 		<main id="main-content">
     		<article>
       			<header>
@@ -40,10 +40,10 @@
 							</li>
 						</ul>
 					</nav>
-					<p>Looking for your next read, friends to read with something</p>
-					<figure class="header-catandbooks">
+					<p>Text about great books here</p>
+					/!--<figure class="header-catandbooks">
 						<img alt="Cartoon drawing of a content cat sitting on a book shelf in soothing colors." src="images/catandbooksdrawing.jpg">
-					</figure>
+					</figure>--/
 					<p>We offer items for adults and children. Prices start from $0.25 to $1, and there are Sunday specials. 100% of your purchase goes to the library. We are conveniently located at the <a href="#roommap" alt="go to map of sale rooms">Cubberley Community Center</a>. Hours vary by sale room, but all rooms are open <span style="color: blue;">11AM-4PM SAT & 1PM-4PM SUN</span></p>
 					<p>Our friendly sales people will help you find treasures in the stacks without sales tax. Need a present? Our gift certificates are available in $5.00 denominations. You can find more information about the <a href="#mainsaleinfo" alt="go to main sale info">Main sale</a>, <a href="#childrensaleinfo" alt="go to children's sale info">Children's sale</a>, and <a href="#bargainsaleinfo" alt="go to bargain sale info">Bargain sale</a> by clicking the links</p>
 					<p>Join us for fun and community...cats &#x1f431 will not be offered for sale or adoption</p>
@@ -51,7 +51,16 @@
     		</article>
 				<article>
 				<!--<p>-->
-					<h1 id="mainsaleinfo">Main sale</h1>
+					<h1 id="membooks">Memorable Books</h1>
+					<p>Text about the first book</p>
+					<figure class="main-catandbooks">
+						<img alt="long haired brown cat sitting with stacks of colorful children's books." src="https://images.pexels.com/photos/17974848/pexels-photo-17974848.jpeg?_gl=1*u1qdtg*_ga*MTIzNzYyNTQzNS4xNzYwNjMwNzQw*_ga_8JE65Q40S6*czE3NjA2MzYwNjckbzIkZzEkdDE3NjA2MzYxMjkkajU5JGwwJGgw">	
+					</figure>
+					<p>Text about the second book</p>
+					<figure class="main-catandbooks">
+						<img alt="long haired brown cat sitting with stacks of colorful children's books." src="https://images.pexels.com/photos/17974848/pexels-photo-17974848.jpeg?_gl=1*u1qdtg*_ga*MTIzNzYyNTQzNS4xNzYwNjMwNzQw*_ga_8JE65Q40S6*czE3NjA2MzYwNjckbzIkZzEkdDE3NjA2MzYxMjkkajU5JGwwJGgw">	
+					</figure>
+					<p>Text about the third book</p>
 					<figure class="main-catandbooks">
 						<img alt="long haired brown cat sitting with stacks of colorful children's books." src="https://images.pexels.com/photos/17974848/pexels-photo-17974848.jpeg?_gl=1*u1qdtg*_ga*MTIzNzYyNTQzNS4xNzYwNjMwNzQw*_ga_8JE65Q40S6*czE3NjA2MzYwNjckbzIkZzEkdDE3NjA2MzYxMjkkajU5JGwwJGgw">	
 					</figure>
@@ -60,8 +69,8 @@
 					<p>Your tickets reserve you places in line when the sale starts at 11AM. You are free to get coffee or check out our Children's and Bargain sales in the meantime. Just get back to the Main room a few minutes before 11AM: you'll forfeit your spot(s) if you're not present. No ticket, no problem! Just join the line and we'll let you in as soon as we can.</p>
 					<p>We love our early shoppers, but during the first hour of the SAT sale there is a 12 book limit on purchases. You may rejoin the line to enter again. The 12 book limit remains in effect until there is no line</p>
 					<p>Why the numbers and line and puchase limit? We care about your health and safety, and the size of our Main room limits occupancy to 160 people. Our ticketing system allows early shopping. Our line system and purchase limit allow walk-up customers access. Everybody wins, and so does the library!</p>
-					<h2 id="childrensaleinfo">Children's sale</h2>
-					<p>Our Children's sale offers books, CDs, DVDs, and toys. Parents and teachers, check us out! We have picture books, youth fiction & non-fiction, and non-Enlish language books. Many prices are $0.50 or $1.00. Children's sale hours are <span style="color: blue;">10AM-4PM SAT & 1PM-4PM SUN</span>. <i>Note that the Children's sale opens 1 hour before the Main sale on Saturday, so be early for the best selection</i></p>
+					<h2 id="otherbooks">Other Books We've Loved</h2>
+					<p>List goes here are <span style="color: blue;">10AM-4PM SAT & 1PM-4PM SUN</span>. <i>Note that the Children's sale opens 1 hour before the Main sale on Saturday, so be early for the best selection</i></p>
 					<p>The Children's sale room faces the Greendell School and San Antonio Rd: find it on our <a href="#roommap" alt="go to map of sale rooms">Sale room map</a>. While you're shopping early on SAT, you need to limit your selections to 12 items: just bring them to the cashiers to hold until you are ready to pay for all of your purchases. Not sure about what to buy for that grandchild or teacher? Our gift certificates (available in $5.00 denominations) make great gifts! Check out our <a href="#bargainsaleinfo" alt="go to bargain sale info">Bargain sale</a> for even better deals!</p>
 					<h3 id="bargainsaleinfo">Bargain sale</h3>
 					<p>Check out the Bargain sale for great deals, AND our Sunday specials! All adult hardback books are $1.00, paperbacks are $0.50, and children's books are only $0.25. You have 2 savings options on Sunday. All items are half-price, or you can purchase a $5.00 bag to fill with as many books as you can jam in there. Bargain sale hours are <span style="color: blue;">10AM-4PM SAT & 1PM-4PM SUN</span>. <i>Note that the Bargain sale opens 1 hour before the Main sale on Saturday, so be early for the best selection</i>. The Bargain sale is in Room H2, facing East Charleston Rd: find it on our <a href="#roommap" alt="go to map of sale rooms">Sale room map</a>. Not sure about what to buy for that friend or relative? Our gift certificates (available in $5.00 denominations) make great gifts!</p>
