--- a/greatesthitspage.html
+++ b/greatesthitspage.html
@@ -51,28 +51,34 @@
     		</article>
 				<article>
 				<!--<p>-->
-					<h1 id="circe">Circe (Madeline Miller, 2018)</h1>
-					<figure class="CirceDustJacket">
-						<img alt="Dust jacket image for Circe, stylized Greek female face in gold and black." src="images/CirceIMG.png">
-						<figcaption>Madeline Miller, 2018</figcaption>
-					</figure>
-					<p>“Monsters are a boon for gods. Imagine all the prayers.” So says Circe, a sly, petulant, and finally commanding voice that narrates the entirety of Miller’s dazzling second novel. The writer returns to Homer, the wellspring that led her to an Orange Prize for The Song of Achilles (2012). This time, she dips into The Odyssey for the legend of Circe, a nymph who turns Odysseus’ crew of men into pigs. Readers will relish following the puzzle of this unpromising daughter of the sun god Helios. It takes banishment to the island Aeaea for Circe to sense her calling as a sorceress: “I stepped into those woods and my life began.” This lonely, scorned figure learns herbs and potions, surrounds herself with lions, and, in a heart-stopping chapter, outwits the monster Scylla to propel Daedalus and his boat to safety. She makes lovers of Hermes and then two mortal men. Circe’s fascination with mortals becomes the book’s marrow and delivers its thrilling ending. All the while, the supernatural sits intriguingly alongside “the tonic of ordinary things.” </p>
-					<p>--<a href="https://www.kirkusreviews.com/book-reviews/madeline-miller/circe/" target="_blank">Kirkus Reviews</a></p>
-					<p>Text about the second book</p>
-					<figure class="KavClayDustJacket">
-						<img alt="Dust jacket image for Kavalier and Clay, comic book style New York City." src="images/KavAndClayIMG.png">
-						<figcaption>Michael Chabon, date</figcaption>
-					</figure>
-					<p>Text about the third book</p>
-					<figure class="LessonsDustJacket">
-						<img alt="Dust jacket image for Lessons in Chemistry, cartoon female scientist face on orange background." src="images/LessonsInChemistry.png">
-						<figcaption>Beth Garmus, date</figcaption>
-					</figure>
-					<p>Text about the third book</p>
-					<figure class="WolfHallDustJacket">
-						<img alt="Dust jacket image for Wolf Hall, bold white lettering on red background." src="images/WolfHall.png">
-						<figcaption>Hillary Mantel, date</figcaption>
-					</figure>
+					<!--The first book content-->
+						<h1 id="circe">Circe (Madeline Miller, 2018)</h1>
+						<figure class="CirceDustJacket">
+							<img alt="Dust jacket image for Circe, stylized Greek female face in gold and black." src="images/CirceIMG.png">
+						</figure>
+						<p>“Monsters are a boon for gods. Imagine all the prayers.” So says Circe, a sly, petulant, and finally commanding voice that narrates the entirety of Miller’s dazzling second novel. The writer returns to Homer, the wellspring that led her to an Orange Prize for The Song of Achilles (2012). This time, she dips into The Odyssey for the legend of Circe, a nymph who turns Odysseus’ crew of men into pigs. Readers will relish following the puzzle of this unpromising daughter of the sun god Helios. It takes banishment to the island Aeaea for Circe to sense her calling as a sorceress: “I stepped into those woods and my life began.” This lonely, scorned figure learns herbs and potions, surrounds herself with lions, and, in a heart-stopping chapter, outwits the monster Scylla to propel Daedalus and his boat to safety. She makes lovers of Hermes and then two mortal men. Circe’s fascination with mortals becomes the book’s marrow and delivers its thrilling ending. All the while, the supernatural sits intriguingly alongside “the tonic of ordinary things.” </p>
+						<p>--<a href="https://www.kirkusreviews.com/book-reviews/madeline-miller/circe/" target="_blank">Kirkus Reviews</a></p>
+					<!--The second book content-->
+						<h2 id="kavandclay">The Amazing Adventures of Kavalier and Clay (Michael Chabon, date)</h2>
+						<figure class="KavClayDustJacket">
+							<img alt="Dust jacket image for Kavalier and Clay, comic book style New York City." src="images/KavAndClayIMG.png">
+						</figure>
+						<p>Text about the second book</p>
+						<p>--<a href="https://www.kirkusreviews.com/book-reviews/madeline-miller/circe/" target="_blank">Kirkus Reviews</a></p>
+					<!--The third book content-->
+						<h3 id="lessons">Lessons in Chemistry (Bonnie Garmus, date)</h3>
+						<figure class="LessonsDustJacket">
+							<img alt="Dust jacket image for Lessons in Chemistry, cartoon female scientist face on orange background." src="images/LessonsInChemistry.png">
+						</figure>
+						<p>Text about the third book</p>
+						<p>--<a href="https://www.kirkusreviews.com/book-reviews/madeline-miller/circe/" target="_blank">Kirkus Reviews</a></p>
+					<!--The fourth book content-->
+						<h4 id="wolfhall">Wolf Hall (Hillary Mantel, date)</h4>
+						<figure class="WolfHallDustJacket">
+							<img alt="Dust jacket image for Wolf Hall, bold white lettering on red background." src="images/WolfHall.png">
+						</figure>
+						<p>Text about the third book</p>
+						<p>--<a href="https://www.kirkusreviews.com/book-reviews/madeline-miller/circe/" target="_blank">Kirkus Reviews</a></p>
 					<p>Our Main sale offers adult books, CDs, DVDs, records, and magazines. Hardcover books start at $1.00 and paperback books start at $0.50. Main sale hours are <span style="color: blue;">11AM-4PM SAT & 1PM-4PM SUN</span>. The Main room faces East Charleston Rd: find it on our <a href="#roommap" alt="go to map of sale rooms">Sale room map</a>. Check out our <a href="#bargainsaleinfo" alt="go to bargain sale info">Bargain sale</a> for even better deals!</p>
 					<p>Your tickets reserve you places in line when the sale starts at 11AM. You are free to get coffee or check out our Children's and Bargain sales in the meantime. Just get back to the Main room a few minutes before 11AM: you'll forfeit your spot(s) if you're not present. No ticket, no problem! Just join the line and we'll let you in as soon as we can.</p>
 					<p>Why the numbers and line and puchase limit? We care about your health and safety, and the size of our Main room limits occupancy to 160 people. Our ticketing system allows early shopping. Our line system and purchase limit allow walk-up customers access. Everybody wins, and so does the library!</p>
