--- a/greatesthitspage.html
+++ b/greatesthitspage.html
@@ -63,8 +63,8 @@
 						<figure class="KavClayDustJacket">
 							<img alt="Dust jacket image for Kavalier and Clay, comic book style New York City." src="images/KavAndClayIMG.png">
 						</figure>
-						<p>Text about the second book</p>
-						<p>--<a href="https://www.kirkusreviews.com/book-reviews/madeline-miller/circe/" target="_blank">Kirkus Reviews</a></p>
+						<p>Czech immigrant Josef Kavalier arrives in Brooklyn in 1939 to stay with his aunt’s family, and sparks are immediately struck between “Joe” (a talented draftsman) and his cousin Sammy Klayman, a hustling go-getter (and hopeful “serious writer”) who dreams of success in the burgeoning new field of newspaper comic strips. The pair dream up, and draw the exploits of, such superheroes as “the Escapist” (a figure resembling “Houdini, but mixed with Robin Hood and a little bit of Albert Schweitzer,” whose sources are revealed in extensive flashbacks that also detail Joe’s training as a magician and escape artist)—and “Kavalier & Clay” become rich and famous. But the shadow of Hitler, and later the pressure of change and political accusation, overtake these two magnificently imagined characters.  The story climaxes unforgettably—and surprisingly—atop the Empire State Building, and its lengthy dénouement (a virtuoso piece of sustained storytelling) ends in a gratifying resolution of the deceptions and disappearances that have become second nature (as well as heavy burdens) to Joe, and a simultaneous “unmasking” and liberation that release Sammy from the storybook world they had made together.</p>
+						<p>--<a href="https://https://www.kirkusreviews.com/book-reviews/michael-chabon/the-amazing-adventures-of-kavalier-and-clay/" target="_blank">Kirkus Reviews</a></p>
 					<!--The third book content-->
 						<h3 id="lessons">Lessons in Chemistry (Bonnie Garmus, date)</h3>
 						<figure class="LessonsDustJacket">
