--- a/greatesthitspage.html
+++ b/greatesthitspage.html
@@ -72,17 +72,23 @@
 						</figure>
 						<p>At the dawn of the 1960s, Elizabeth Zott finds herself in an unexpected position. She's the star of a television program called Supper at Six that has taken American housewives by storm, but it's certainly not what the crass station head envisions: “ 'Meaningful?' Phil snapped. 'What are you? Amish? As for nutritious: no. You’re killing the show before it even gets started.’” Elizabeth is a chemist, recently forced to leave the lab where she was doing important research due to an out-of-wedlock pregnancy. Now she's reduced to explaining things like when to put the steak in the pan. If ever a woman was capable of running her own life, it's Elizabeth. But because it's the 1950s, then the '60s, men have their sweaty paws all over both her successes and failures. On the plus side, there's Calvin Evans, world-famous chemist, love of her life, and father of her child; also Walter Pine, her friend who works in television; and a journalist who at least tries to do the right thing. This is the kind of book that has a long-buried secret at a corrupt orphanage with a mysterious benefactor as well as an extremely intelligent dog named Six-Thirty, recently retired from the military. Garmus' energetic debut also features an invigorating subplot about rowing.</p>
 						<p>--<a href="https://www.kirkusreviews.com/book-reviews/bonnie-garmus/lessons-chemistry/" target="_blank">Kirkus Reviews</a></p>
-					<!--The fourth book content-->
+					<!--The fourth book content
 						<h4 id="wolfhall">Wolf Hall (Hillary Mantel, date)</h4>
 						<figure class="WolfHallDustJacket">
 							<img alt="Dust jacket image for Wolf Hall, bold white lettering on red background." src="images/WolfHall.png">
 						</figure>
 						<p>Text about the third book</p>
-						<p>--<a href="https://www.kirkusreviews.com/book-reviews/madeline-miller/circe/" target="_blank">Kirkus Reviews</a></p>
+						<p>--<a href="https://www.kirkusreviews.com/book-reviews/madeline-miller/circe/" target="_blank">Kirkus Reviews</a></p>-->
 					<p>Our Main sale offers adult books, CDs, DVDs, records, and magazines. Hardcover books start at $1.00 and paperback books start at $0.50. Main sale hours are <span style="color: blue;">11AM-4PM SAT & 1PM-4PM SUN</span>. The Main room faces East Charleston Rd: find it on our <a href="#roommap" alt="go to map of sale rooms">Sale room map</a>. Check out our <a href="#bargainsaleinfo" alt="go to bargain sale info">Bargain sale</a> for even better deals!</p>
-					<p>Your tickets reserve you places in line when the sale starts at 11AM. You are free to get coffee or check out our Children's and Bargain sales in the meantime. Just get back to the Main room a few minutes before 11AM: you'll forfeit your spot(s) if you're not present. No ticket, no problem! Just join the line and we'll let you in as soon as we can.</p>
-					<p>Why the numbers and line and puchase limit? We care about your health and safety, and the size of our Main room limits occupancy to 160 people. Our ticketing system allows early shopping. Our line system and purchase limit allow walk-up customers access. Everybody wins, and so does the library!</p>
-					<h2 id="otherbooks">Other Books We've Loved</h2>
+					<h4 id="otherbooks">Other Books We've Loved</h4>
+					<ul>
+						<li><a alt="The Great Gatsby, a novel written by F. Scott Fitzgerald in 19nn">The Great Gatsby (F. Scott Fitzgerald, 19nn)</a></li>
+						<li><a alt="The Time Traveler's Wife, a novel written by F. Scott Fitzgerald in 19nn">The Time Traveler's Wife (F. Scott Fitzgerald, 19nn)</a></li>
+						<li><a alt="Corelli's Mandolin, a novel written by F. Scott Fitzgerald in 19nn">Corelli's Mandolin (F. Scott Fitzgerald, 19nn)</a></li>
+						<li><a alt="A Gentleman in Moscow, a novel written by F. Scott Fitzgerald in 19nn">A Gentleman in Moscow (F. Scott Fitzgerald, 19nn)</a></li>
+						<li><a alt="Station Eleven, a novel written by F. Scott Fitzgerald in 19nn">Station Eleven (F. Scott Fitzgerald, 19nn)</a></li>
+						<li><a alt="Lincoln in the Bardo, a novel written by F. Scott Fitzgerald in 19nn">Lincoln in the Bardo (F. Scott Fitzgerald, 19nn)</a></li>
+					</ul> 
 					<p>List goes here are <span style="color: blue;">10AM-4PM SAT & 1PM-4PM SUN</span>. <i>Note that the Children's sale opens 1 hour before the Main sale on Saturday, so be early for the best selection</i></p>
 					<p>The Children's sale room faces the Greendell School and San Antonio Rd: find it on our <a href="#roommap" alt="go to map of sale rooms">Sale room map</a>. While you're shopping early on SAT, you need to limit your selections to 12 items: just bring them to the cashiers to hold until you are ready to pay for all of your purchases. Not sure about what to buy for that grandchild or teacher? Our gift certificates (available in $5.00 denominations) make great gifts! Check out our <a href="#bargainsaleinfo" alt="go to bargain sale info">Bargain sale</a> for even better deals!</p>
 					<p>Friends of the Palo Alto Library (FOPAL) is a member-supported 501(c)(3) non-profit organization dedicated to supporting the <a href="https://library.cityofpaloalto.org/" target="_blank">Palo Alto City Library</a> and its users through volunteerism, book sales, and advocacy. Established in 1938, FOPAL has grown with the library community it serves.
