--- a/greatesthitspage.html
+++ b/greatesthitspage.html
@@ -88,6 +88,9 @@
 						<li><a alt="A Gentleman in Moscow, a novel written by F. Scott Fitzgerald in 19nn">A Gentleman in Moscow (F. Scott Fitzgerald, 19nn)</a></li>
 						<li><a alt="Station Eleven, a novel written by F. Scott Fitzgerald in 19nn">Station Eleven (F. Scott Fitzgerald, 19nn)</a></li>
 						<li><a alt="Lincoln in the Bardo, a novel written by F. Scott Fitzgerald in 19nn">Lincoln in the Bardo (F. Scott Fitzgerald, 19nn)</a></li>
+						<li><a alt="Middlemarch, a novel written by F. Scott Fitzgerald in 19nn">Middlemarch (F. Scott Fitzgerald, 19nn)</a></li>
+						<li><a alt="The Known World, a novel written by F. Scott Fitzgerald in 19nn">The Known World (F. Scott Fitzgerald, 19nn)</a></li>
+						<li><a alt="The Worst Hard Time, a non-fiction work written by F. Scott Fitzgerald in 19nn">The Worst Hard Time (F. Scott Fitzgerald, 19nn)</a></li>
 					</ul> 
 					<p>List goes here are <span style="color: blue;">10AM-4PM SAT & 1PM-4PM SUN</span>. <i>Note that the Children's sale opens 1 hour before the Main sale on Saturday, so be early for the best selection</i></p>
 					<p>The Children's sale room faces the Greendell School and San Antonio Rd: find it on our <a href="#roommap" alt="go to map of sale rooms">Sale room map</a>. While you're shopping early on SAT, you need to limit your selections to 12 items: just bring them to the cashiers to hold until you are ready to pay for all of your purchases. Not sure about what to buy for that grandchild or teacher? Our gift certificates (available in $5.00 denominations) make great gifts! Check out our <a href="#bargainsaleinfo" alt="go to bargain sale info">Bargain sale</a> for even better deals!</p>
@@ -100,14 +103,14 @@ Our volunteers conduct monthly and online sales of books and other media donated
 			<nav>
 				<ul> <!--can add classes here later-->
 					<li><a href="#greatestpage-title" alt="go to the top of the page">Home</a></li>
-					<li><a href="https://www.ebay.com/str/friendsofthepaloaltolibrary" alt="go to the Friends of the Palo Alto Library eBay shop">Shop select books</a></li>
-					<li><a href="https://www.discogs.com/user/FOPAL" alt="go to the Friends of the Palo Alto Library Discogs shop">Shop select music</a></li>
-					<li><a href="https://www.fopal.org/contact" alt="go to the Friends of the Palo Alto Library contact page">Contact us</a></li>
-					<li><a href="https://www.indiantrailslibrary.org/" alt="go to the library website">Library</a></li>
+					<li><a href="finalproject.html" alt="go to the Whippoorwill Book Club main page">Shop select books</a></li>
+					<li><a href="https://www.indiantrailslibrary.org/" alt="go to the Indian Trails Public Library District website">Library (ITPLD)</a></li>
+					<li><a href="https://www.kirkusreviews.com/" alt="go to the Kirkus Reviews website">Kirkus Reviews</a></li>
 				</ul>
 			</nav>
 			<p>Copyright 2025; LBedner lbedner@my.dom.edu.</p>
-			<p><i>Cat sleeping on a pile of books</i>, Image by (Hovee, Nate) via iStock (Asset ID: 1271623554), Editorial use only</p>
+			<p><i>Book jacket images are screenshots of images from the Amazon website</i></p>
+			<p><i>Book descriptions are slightly condensed versions of Kirkus Reviews content</i>
 			<p><i>Cat Sitting on a Stack of Books</i>, Image by (Nilov, Mikhail) via Pexels (ID: blah), <a href="https://www.pexels.com/license/" target="_blank">Pexels License</a></p>
 			<p><i>Map image</i> courtesy of Friends of the Palo Alto Library (FOPAL), from <a href="https://www.fopal.org/" target="_blank">fopal.org</a></p>
 		</footer>
