--- a/greatesthitspage.html
+++ b/greatesthitspage.html
@@ -83,14 +83,14 @@
 					<h4 id="otherbooks">Other Books We've Loved</h4>
 					<ul>
 						<li><a alt="The Great Gatsby, a novel written by F. Scott Fitzgerald in 19nn">The Great Gatsby (F. Scott Fitzgerald, 19nn)</a></li>
-						<li><a alt="The Time Traveler's Wife, a novel written by F. Scott Fitzgerald in 19nn">The Time Traveler's Wife (F. Scott Fitzgerald, 19nn)</a></li>
-						<li><a alt="Corelli's Mandolin, a novel written by F. Scott Fitzgerald in 19nn">Corelli's Mandolin (F. Scott Fitzgerald, 19nn)</a></li>
-						<li><a alt="A Gentleman in Moscow, a novel written by F. Scott Fitzgerald in 19nn">A Gentleman in Moscow (F. Scott Fitzgerald, 19nn)</a></li>
-						<li><a alt="Station Eleven, a novel written by F. Scott Fitzgerald in 19nn">Station Eleven (F. Scott Fitzgerald, 19nn)</a></li>
-						<li><a alt="Lincoln in the Bardo, a novel written by F. Scott Fitzgerald in 19nn">Lincoln in the Bardo (F. Scott Fitzgerald, 19nn)</a></li>
-						<li><a alt="Middlemarch, a novel written by F. Scott Fitzgerald in 19nn">Middlemarch (F. Scott Fitzgerald, 19nn)</a></li>
+						<li><a alt="The Time Traveler's Wife, a novel written by Audrey Niffenegger in 19nn">The Time Traveler's Wife (Audrey Niffenegger, 19nn)</a></li>
+						<li><a alt="Corelli's Mandolin, a novel written by de Berneis in 19nn">Corelli's Mandolin (de Berneis, 19nn)</a></li>
+						<li><a alt="A Gentleman in Moscow, a novel written by Amor Towles in 19nn">A Gentleman in Moscow (Amor Towles, 19nn)</a></li>
+						<li><a alt="Station Eleven, a novel written by Emily in 19nn">Station Eleven (Emily, 19nn)</a></li>
+						<li><a alt="Lincoln in the Bardo, a novel written by George Saunders in 19nn">Lincoln in the Bardo (George Saunders, 19nn)</a></li>
+						<li><a alt="Middlemarch, a novel written by George Eliot in 18nn">Middlemarch (George Eliot, 18nn)</a></li>
 						<li><a alt="The Known World, a novel written by F. Scott Fitzgerald in 19nn">The Known World (F. Scott Fitzgerald, 19nn)</a></li>
-						<li><a alt="The Worst Hard Time, a non-fiction work written by F. Scott Fitzgerald in 19nn">The Worst Hard Time (F. Scott Fitzgerald, 19nn)</a></li>
+						<li><a alt="The Worst Hard Time, a non-fiction work written by Timothy Egan in 19nn">The Worst Hard Time (Timothy Egan, 19nn)</a></li>
 					</ul> 
 					<p>List goes here are <span style="color: blue;">10AM-4PM SAT & 1PM-4PM SUN</span>. <i>Note that the Children's sale opens 1 hour before the Main sale on Saturday, so be early for the best selection</i></p>
 					<p>The Children's sale room faces the Greendell School and San Antonio Rd: find it on our <a href="#roommap" alt="go to map of sale rooms">Sale room map</a>. While you're shopping early on SAT, you need to limit your selections to 12 items: just bring them to the cashiers to hold until you are ready to pay for all of your purchases. Not sure about what to buy for that grandchild or teacher? Our gift certificates (available in $5.00 denominations) make great gifts! Check out our <a href="#bargainsaleinfo" alt="go to bargain sale info">Bargain sale</a> for even better deals!</p>
