--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -18,8 +18,8 @@
 		<main id="main-content">
     		<article>
       			<header>
-					<h1 id="aboutpage-title">Meet some members of the Whippoorwill Book Club</h1>
-					<h2 id="aboutpage-subtitle">something here maybe</h2>
+					<h1 id="page-title">Meet some members of the Whippoorwill Book Club</h1>
+					<h2 id="page-subtitle">something here maybe</h2>
 					<!--<p>Posted by: WBC</p>-->
 					<nav>
 						<ul class="menu-items">
