--- a/greatesthitspage.html
+++ b/greatesthitspage.html
@@ -18,8 +18,8 @@
 		<main id="main-content">
     		<article>
       			<header>
-					<h1 id="greatestpage-title">Whippoorwill Book Club Greatest Hits</h1>
-					<h2 id="greatestpage-subtitle">Memorable Books for Thought and Discussion</h2>
+					<h1 id="page-title">Whippoorwill Book Club Greatest Hits</h1>
+					<h2 id="page-subtitle">Memorable Books for Thought and Discussion</h2>
 					<!--<p>Posted by: WBC</p>-->
 					<nav>
 						<ul class="menu-items">
@@ -82,15 +82,15 @@
 					<p>Our Main sale offers adult books, CDs, DVDs, records, and magazines. Hardcover books start at $1.00 and paperback books start at $0.50. Main sale hours are <span style="color: blue;">11AM-4PM SAT & 1PM-4PM SUN</span>. The Main room faces East Charleston Rd: find it on our <a href="#roommap" alt="go to map of sale rooms">Sale room map</a>. Check out our <a href="#bargainsaleinfo" alt="go to bargain sale info">Bargain sale</a> for even better deals!</p>
 					<h4 id="otherbooks">Other Books We've Loved</h4>
 					<ul>
-						<li><a alt="The Great Gatsby, a novel written by F. Scott Fitzgerald in 19nn">The Great Gatsby (F. Scott Fitzgerald, 19nn)</a></li>
-						<li><a alt="The Time Traveler's Wife, a novel written by Audrey Niffenegger in 19nn">The Time Traveler's Wife (Audrey Niffenegger, 19nn)</a></li>
-						<li><a alt="Corelli's Mandolin, a novel written by de Berneis in 19nn">Corelli's Mandolin (de Berneis, 19nn)</a></li>
-						<li><a alt="A Gentleman in Moscow, a novel written by Amor Towles in 19nn">A Gentleman in Moscow (Amor Towles, 19nn)</a></li>
-						<li><a alt="Station Eleven, a novel written by Emily in 19nn">Station Eleven (Emily, 19nn)</a></li>
-						<li><a alt="Lincoln in the Bardo, a novel written by George Saunders in 19nn">Lincoln in the Bardo (George Saunders, 19nn)</a></li>
-						<li><a alt="Middlemarch, a novel written by George Eliot in 18nn">Middlemarch (George Eliot, 18nn)</a></li>
-						<li><a alt="The Known World, a novel written by F. Scott Fitzgerald in 19nn">The Known World (F. Scott Fitzgerald, 19nn)</a></li>
-						<li><a alt="The Worst Hard Time, a non-fiction work written by Timothy Egan in 19nn">The Worst Hard Time (Timothy Egan, 19nn)</a></li>
+						<li><a alt="The Great Gatsby, a novel written by F. Scott Fitzgerald in 1925">The Great Gatsby (F. Scott Fitzgerald, 1925)</a></li>
+						<li><a alt="The Time Traveler's Wife, a novel written by Audrey Niffenegger in 2003">The Time Traveler's Wife (Audrey Niffenegger, 2003)</a></li>
+						<li><a alt="Corelli's Mandolin, a novel written by Louis de Bernieris in 1994">Corelli's Mandolin (Louis de Bernieris, 1994)</a></li>
+						<li><a alt="A Gentleman in Moscow, a novel written by Amor Towles in 2016">A Gentleman in Moscow (Amor Towles, 2016)</a></li>
+						<li><a alt="Station Eleven, a novel written by Emily St. John Mandel in 2014">Station Eleven (Emily St. John Mandel, 2014)</a></li>
+						<li><a alt="Lincoln in the Bardo, a novel written by George Saunders in 2017">Lincoln in the Bardo (George Saunders, 2017)</a></li>
+						<li><a alt="Middlemarch, a novel written by George Eliot in 1872">Middlemarch (George Eliot, 1872)</a></li>
+						<li><a alt="The Known World, a novel written by Edward P. Jones in 2003">The Known World (Edward P. Jones, 2003)</a></li>
+						<li><a alt="The Worst Hard Time, a non-fiction work written by Timothy Egan in 2006">The Worst Hard Time (Timothy Egan, 2006)</a></li>
 					</ul> 
 					<p>List goes here are <span style="color: blue;">10AM-4PM SAT & 1PM-4PM SUN</span>. <i>Note that the Children's sale opens 1 hour before the Main sale on Saturday, so be early for the best selection</i></p>
 					<p>The Children's sale room faces the Greendell School and San Antonio Rd: find it on our <a href="#roommap" alt="go to map of sale rooms">Sale room map</a>. While you're shopping early on SAT, you need to limit your selections to 12 items: just bring them to the cashiers to hold until you are ready to pay for all of your purchases. Not sure about what to buy for that grandchild or teacher? Our gift certificates (available in $5.00 denominations) make great gifts! Check out our <a href="#bargainsaleinfo" alt="go to bargain sale info">Bargain sale</a> for even better deals!</p>
@@ -103,7 +103,7 @@ Our volunteers conduct monthly and online sales of books and other media donated
 			<nav>
 				<ul> <!--can add classes here later-->
 					<li><a href="#greatestpage-title" alt="go to the top of the page">Home</a></li>
-					<li><a href="finalproject.html" alt="go to the Whippoorwill Book Club main page">Shop select books</a></li>
+					<li><a href="finalproject.html" alt="go to the Whippoorwill Book Club main page">WBC Main Page</a></li>
 					<li><a href="https://www.indiantrailslibrary.org/" alt="go to the Indian Trails Public Library District website">Library (ITPLD)</a></li>
 					<li><a href="https://www.kirkusreviews.com/" alt="go to the Kirkus Reviews website">Kirkus Reviews</a></li>
 				</ul>
