--- a/greatesthitspage.html
+++ b/greatesthitspage.html
@@ -53,10 +53,11 @@
 				<!--<p>-->
 					<!--The first book content-->
 						<h1 id="circe">Circe (Madeline Miller, 2018)</h1>
-						<figure class="CirceDustJacket">
-							<img alt="Dust jacket image for Circe, stylized Greek female face in gold and black." src="images/CirceIMG.png">
-						</figure>
-						<p>“Monsters are a boon for gods. Imagine all the prayers.” So says Circe, a sly, petulant, and finally commanding voice that narrates the entirety of Miller’s dazzling second novel. The writer returns to Homer, the wellspring that led her to an Orange Prize for The Song of Achilles (2012). This time, she dips into The Odyssey for the legend of Circe, a nymph who turns Odysseus’ crew of men into pigs. Readers will relish following the puzzle of this unpromising daughter of the sun god Helios. It takes banishment to the island Aeaea for Circe to sense her calling as a sorceress: “I stepped into those woods and my life began.” This lonely, scorned figure learns herbs and potions, surrounds herself with lions, and, in a heart-stopping chapter, outwits the monster Scylla to propel Daedalus and his boat to safety. She makes lovers of Hermes and then two mortal men. Circe’s fascination with mortals becomes the book’s marrow and delivers its thrilling ending. All the while, the supernatural sits intriguingly alongside “the tonic of ordinary things.” </p>
+						<p>“Monsters are a boon for gods. Imagine all the prayers.” So says Circe, a sly, petulant, and finally commanding voice that narrates the entirety of Miller’s dazzling second novel. The writer returns to Homer, the wellspring that led her to an Orange Prize for The Song of Achilles (2012). This time, she dips into The Odyssey for the legend of Circe, a nymph who turns Odysseus’ crew of men into pigs. Readers will relish following the puzzle of this unpromising daughter of the sun god Helios. It takes banishment to the island Aeaea for Circe to sense her calling as a sorceress: “I stepped into those woods and my life began.” This lonely, scorned figure learns herbs and potions, surrounds herself with lions, and, in a heart-stopping chapter, outwits the monster Scylla to propel Daedalus and his boat to safety. She makes lovers of Hermes and then two mortal men. Circe’s fascination with mortals becomes the book’s marrow and delivers its thrilling ending. All the while, the supernatural sits intriguingly alongside “the tonic of ordinary things.”
+							<figure class="CirceDustJacket">
+								<img alt="Dust jacket image for Circe, stylized Greek female face in gold and black." src="images/CirceIMG.png">
+							</figure>
+						</p>
 						<p>--<a href="https://www.kirkusreviews.com/book-reviews/madeline-miller/circe/" target="_blank">Kirkus Reviews</a></p>
 					<!--The second book content-->
 						<h2 id="kavandclay">The Amazing Adventures of Kavalier and Clay (Michael Chabon, 2000)</h2>
