--- a/obocpage.html
+++ b/obocpage.html
@@ -1,1 +1,120 @@
-
+<!DOCTYPE html>
+<html lang="en-US">
+	<head>
+		<link rel="stylesheet" href="finalproject.css">
+		<title>Final Project One Book One Community Page</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta charset="utf-8">
+	</head>
+	<body>
+		<a id="skip-nav" class="screenreader-text" href="#main-content">Skip to Content</a>
+		<button onclick="darkMode()">Toggle dark mode &#128008;&#8205;&#11035;</button>
+		<script>
+			function darkMode() {
+  				document.body.classList.toggle('dark-mode');
+			}
+		</script>
+		<div id="welcMessage">Welcome to the WBC One Book page! <button onclick="document.getElementById('welcMessage').style.display='none';">Dismiss &#129668;</button></div>
+		<main id="main-content">
+    		<article>
+      			<header>
+					<h1 id="page-title">Whippoorwill Book Club One Book One Community</h1>
+					<h2 id="page-subtitle">Our Dedication to Hello, Beautiful!</h2>
+					<!--<p>Posted by: WBC</p>-->
+					<nav>
+						<ul class="menu-items">
+							<li class="menu-items-opt home">
+								<a href="#page-title" alt="refresh the page">Home</a>
+							</li>
+							<li class="menu-items-opt">
+								<a href="finalproject.html" alt="go to the Whippoorwill Book Club main page">Book Club Main</a>
+							</li>
+							<li class="menu-items-opt">
+								<a href="aboutuspage.html" alt="go to the about us page">About us</a>
+							</li>
+							<li class="menu-items-opt">
+								<a href="obocpage.html" alt="go to the one book one community page">One Book</a>
+							</li>
+							<li class="menu-items-opt">
+								<a href="https://www.indiantrailslibrary.org/" alt="go to the library website">Library</a>
+							</li>
+						</ul>
+					</nav>
+					<p>Text about One Book One Community program here</p>
+					<figure class="header-catandbooks">
+						<img alt="Cropped view of colorful Hello, Beautiful! dust jacket highlighting woman's eyes." src="images/catandbooksdrawing.jpg">
+					</figure>
+					<p>We offer items for adults and children. Prices start from $0.25 to $1, and there are Sunday specials. 100% of your purchase goes to the library. We are conveniently located at the <a href="#roommap" alt="go to map of sale rooms">Cubberley Community Center</a>. Hours vary by sale room, but all rooms are open <span style="color: blue;">11AM-4PM SAT & 1PM-4PM SUN</span></p>
+					<p>Our friendly sales people will help you find treasures in the stacks without sales tax. Need a present? Our gift certificates are available in $5.00 denominations. You can find more information about the <a href="#mainsaleinfo" alt="go to main sale info">Main sale</a>, <a href="#childrensaleinfo" alt="go to children's sale info">Children's sale</a>, and <a href="#bargainsaleinfo" alt="go to bargain sale info">Bargain sale</a> by clicking the links</p>
+					<p>Join us for fun and community...cats &#x1f431 will not be offered for sale or adoption</p>
+				</header>
+    		</article>
+				<article>
+				<!--<p>-->
+					<!--The first book content-->
+						<h1 id="circe">Circe (Madeline Miller, 2018)</h1>
+						<p>“Monsters are a boon for gods. Imagine all the prayers.” So says Circe, a sly, petulant, and finally commanding voice that narrates the entirety of Miller’s dazzling second novel. The writer returns to Homer, the wellspring that led her to an Orange Prize for The Song of Achilles (2012). This time, she dips into The Odyssey for the legend of Circe, a nymph who turns Odysseus’ crew of men into pigs. Readers will relish following the puzzle of this unpromising daughter of the sun god Helios. It takes banishment to the island Aeaea for Circe to sense her calling as a sorceress: “I stepped into those woods and my life began.” This lonely, scorned figure learns herbs and potions, surrounds herself with lions, and, in a heart-stopping chapter, outwits the monster Scylla to propel Daedalus and his boat to safety. She makes lovers of Hermes and then two mortal men. Circe’s fascination with mortals becomes the book’s marrow and delivers its thrilling ending. All the while, the supernatural sits intriguingly alongside “the tonic of ordinary things.”
+							<figure class="CirceDustJacket">
+								<img alt="Dust jacket image for Circe, stylized Greek female face in gold and black." src="images/CirceIMG.png">
+							</figure>
+						</p>
+						<p>--<a href="https://www.kirkusreviews.com/book-reviews/madeline-miller/circe/" target="_blank">Kirkus Reviews</a></p>
+					<!--The second book content-->
+						<h2 id="kavandclay">The Amazing Adventures of Kavalier and Clay (Michael Chabon, 2000)</h2>
+						<figure class="KavClayDustJacket">
+							<img alt="Dust jacket image for Kavalier and Clay, comic book style New York City." src="images/KavAndClayIMG.png">
+						</figure>
+						<p>Czech immigrant Josef Kavalier arrives in Brooklyn in 1939 to stay with his aunt’s family, and sparks are immediately struck between “Joe” (a talented draftsman) and his cousin Sammy Klayman, a hustling go-getter (and hopeful “serious writer”) who dreams of success in the burgeoning new field of newspaper comic strips. The pair dream up, and draw the exploits of, such superheroes as “the Escapist” (a figure resembling “Houdini, but mixed with Robin Hood and a little bit of Albert Schweitzer,” whose sources are revealed in extensive flashbacks that also detail Joe’s training as a magician and escape artist)—and “Kavalier & Clay” become rich and famous. But the shadow of Hitler, and later the pressure of change and political accusation, overtake these two magnificently imagined characters.  The story climaxes unforgettably—and surprisingly—atop the Empire State Building, and its lengthy dénouement (a virtuoso piece of sustained storytelling) ends in a gratifying resolution of the deceptions and disappearances that have become second nature (as well as heavy burdens) to Joe, and a simultaneous “unmasking” and liberation that release Sammy from the storybook world they had made together.</p>
+						<p>--<a href="https://https://www.kirkusreviews.com/book-reviews/michael-chabon/the-amazing-adventures-of-kavalier-and-clay/" target="_blank">Kirkus Reviews</a></p>
+					<!--The third book content-->
+						<h3 id="lessons">Lessons in Chemistry (Bonnie Garmus, 2022)</h3>
+						<figure class="LessonsDustJacket">
+							<img alt="Dust jacket image for Lessons in Chemistry, cartoon female scientist face on orange background." src="images/LessonsInChemistry.png">
+						</figure>
+						<p>At the dawn of the 1960s, Elizabeth Zott finds herself in an unexpected position. She's the star of a television program called Supper at Six that has taken American housewives by storm, but it's certainly not what the crass station head envisions: “ 'Meaningful?' Phil snapped. 'What are you? Amish? As for nutritious: no. You’re killing the show before it even gets started.’” Elizabeth is a chemist, recently forced to leave the lab where she was doing important research due to an out-of-wedlock pregnancy. Now she's reduced to explaining things like when to put the steak in the pan. If ever a woman was capable of running her own life, it's Elizabeth. But because it's the 1950s, then the '60s, men have their sweaty paws all over both her successes and failures. On the plus side, there's Calvin Evans, world-famous chemist, love of her life, and father of her child; also Walter Pine, her friend who works in television; and a journalist who at least tries to do the right thing. This is the kind of book that has a long-buried secret at a corrupt orphanage with a mysterious benefactor as well as an extremely intelligent dog named Six-Thirty, recently retired from the military. Garmus' energetic debut also features an invigorating subplot about rowing.</p>
+						<p>--<a href="https://www.kirkusreviews.com/book-reviews/bonnie-garmus/lessons-chemistry/" target="_blank">Kirkus Reviews</a></p>
+					<!--The fourth book content
+						<h4 id="wolfhall">Wolf Hall (Hillary Mantel, date)</h4>
+						<figure class="WolfHallDustJacket">
+							<img alt="Dust jacket image for Wolf Hall, bold white lettering on red background." src="images/WolfHall.png">
+						</figure>
+						<p>Text about the third book</p>
+						<p>--<a href="https://www.kirkusreviews.com/book-reviews/madeline-miller/circe/" target="_blank">Kirkus Reviews</a></p>-->
+					<p>Our Main sale offers adult books, CDs, DVDs, records, and magazines. Hardcover books start at $1.00 and paperback books start at $0.50. Main sale hours are <span style="color: blue;">11AM-4PM SAT & 1PM-4PM SUN</span>. The Main room faces East Charleston Rd: find it on our <a href="#roommap" alt="go to map of sale rooms">Sale room map</a>. Check out our <a href="#bargainsaleinfo" alt="go to bargain sale info">Bargain sale</a> for even better deals!</p>
+					<h4 id="LWMovies">Film Versions of Little Women</h4>
+					<p>Did you know there are n film versions of Little Women? Here's a list and you can find many of them on DVD and/or Bluray at the library</p>
+          <ul>
+						<li><a alt="Little Women, a film directed by F. Scott Fitzgerald in 1925">Little Women (director, date)</a></li>
+						<li><a alt="Little Women, a film directed by Audrey Niffenegger in 2003">Little Women (director, date)</a></li>
+						<li><a alt="Little Women, a film directed by Louis de Bernieris in 1994">Little Women (director, date)</a></li>
+						<li><a alt="Little Women, a film directed by Amor Towles in 2016">Little Women (director, date)</a></li>
+						<li><a alt="Station Eleven, a novel written by Emily St. John Mandel in 2014">Station Eleven (Emily St. John Mandel, 2014)</a></li>
+						<li><a alt="Lincoln in the Bardo, a novel written by George Saunders in 2017">Lincoln in the Bardo (George Saunders, 2017)</a></li>
+						<li><a alt="Middlemarch, a novel written by George Eliot in 1872">Middlemarch (George Eliot, 1872)</a></li>
+						<li><a alt="The Known World, a novel written by Edward P. Jones in 2003">The Known World (Edward P. Jones, 2003)</a></li>
+						<li><a alt="The Worst Hard Time, a non-fiction work written by Timothy Egan in 2006">The Worst Hard Time (Timothy Egan, 2006)</a></li>
+					</ul> 
+					<p>List goes here are <span style="color: blue;">10AM-4PM SAT & 1PM-4PM SUN</span>. <i>Note that the Children's sale opens 1 hour before the Main sale on Saturday, so be early for the best selection</i></p>
+					<p>The Children's sale room faces the Greendell School and San Antonio Rd: find it on our <a href="#roommap" alt="go to map of sale rooms">Sale room map</a>. While you're shopping early on SAT, you need to limit your selections to 12 items: just bring them to the cashiers to hold until you are ready to pay for all of your purchases. Not sure about what to buy for that grandchild or teacher? Our gift certificates (available in $5.00 denominations) make great gifts! Check out our <a href="#bargainsaleinfo" alt="go to bargain sale info">Bargain sale</a> for even better deals!</p>
+					<p>Friends of the Palo Alto Library (FOPAL) is a member-supported 501(c)(3) non-profit organization dedicated to supporting the <a href="https://library.cityofpaloalto.org/" target="_blank">Palo Alto City Library</a> and its users through volunteerism, book sales, and advocacy. Established in 1938, FOPAL has grown with the library community it serves.
+Our volunteers conduct monthly and online sales of books and other media donated by the community. Net proceeds from our sales are used for the purchase of books, media, online resources, equipment, and special programs for Palo Alto’s five public libraries.</p>
+				<!--</p>-->
+				</article>
+		</main>
+		<footer id="page-footer">
+			<nav>
+				<ul> <!--can add classes here later-->
+					<li><a href="#page-title" alt="go to the top of the page">Home</a></li>
+					<li><a href="finalproject.html" alt="go to the Whippoorwill Book Club main page">WBC Main Page</a></li>
+					<li><a href="https://www.indiantrailslibrary.org/" alt="go to the Indian Trails Public Library District website">Library (ITPLD)</a></li>
+					<li><a href="https://www.kirkusreviews.com/" alt="go to the Kirkus Reviews website">Kirkus Reviews</a></li>
+				</ul>
+			</nav>
+			<p>Copyright 2025; LBedner lbedner@my.dom.edu.</p>
+			<p><i>Book jacket image is a screenshot of an image from somebody's website</i></p>
+			<p><i>Book descriptions are slightly condensed versions of Kirkus Reviews content</i>
+			<p><i>Cat Sitting on a Stack of Books</i>, Image by (Nilov, Mikhail) via Pexels (ID: blah), <a href="https://www.pexels.com/license/" target="_blank">Pexels License</a></p>
+			<p><i>Map image</i> courtesy of Friends of the Palo Alto Library (FOPAL), from <a href="https://www.fopal.org/" target="_blank">fopal.org</a></p>
+		</footer>
+	</body>
+</html>
