--- a/finalproject.html
+++ b/finalproject.html
@@ -19,8 +19,8 @@
     		<article>
       			<header>
 					<div class="header">
-  						<img src="images/LogoWBCReduced.PNG" alt="Book club logo simple bird in a circle" />
-  						<h1 id="page-title">The Whippoorwill Book Club</h1>
+  						<h1 id="mainpage-title">The Whippoorwill Book Club</h1>
+						<img src="images/LogoWBCReduced.PNG" alt="Book club logo simple bird in a circle" />
 					</div>
 					<!--<figure class="LogoWBC">
 						<img alt="Whippoorwill logo for the book club." src="images/LogoWBCReduced.PNG">
