--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -19,7 +19,7 @@
     		<article>
       			<header>
 					<h1 id="aboutuspage-title">Meet some members of the Whippoorwill Book Club</h1>
-					<h2 id="aboutuspage-subtitle">something here maybe</h2>
+					<h2 id="page-subtitle">something here maybe</h2>
 					<!--<p>Posted by: WBC</p>-->
 					<nav>
 						<ul class="menu-items">
