--- a/greatesthitspage.html
+++ b/greatesthitspage.html
@@ -18,7 +18,7 @@
 		<main id="main-content">
     		<article>
       			<header>
-					<h1 id="page-title">Whippoorwill Book Club Greatest Hits</h1>
+					<h1 id="greatestpage-title">Whippoorwill Book Club Greatest Hits</h1>
 					<h2 id="page-subtitle">Memorable Books for Thought and Discussion</h2>
 					<!--<p>Posted by: WBC</p>-->
 					<nav>
