--- a/obocpage.html
+++ b/obocpage.html
@@ -18,7 +18,7 @@
 		<main id="main-content">
     		<article>
       			<header>
-					<h1 id="page-title">Whippoorwill Book Club One Book One Community</h1>
+					<h1 id="obcpage-title">Whippoorwill Book Club One Book One Community</h1>
 					<h2 id="page-subtitle">Our Dedication to Hello, Beautiful!</h2>
 					<!--<p>Posted by: WBC</p>-->
 					<nav>
@@ -41,8 +41,8 @@
 						</ul>
 					</nav>
 					<p>Text about One Book One Community program here</p>
-					<figure class="header-catandbooks">
-						<img alt="Cropped view of colorful Hello, Beautiful! dust jacket highlighting woman's eyes." src="images/catandbooksdrawing.jpg">
+					<figure class="header-helloB">
+						<img alt="Cropped view of colorful Hello, Beautiful! dust jacket highlighting woman's eyes." src="images/HelloBBigIMG.png">
 					</figure>
 					<p>We offer items for adults and children. Prices start from $0.25 to $1, and there are Sunday specials. 100% of your purchase goes to the library. We are conveniently located at the <a href="#roommap" alt="go to map of sale rooms">Cubberley Community Center</a>. Hours vary by sale room, but all rooms are open <span style="color: blue;">11AM-4PM SAT & 1PM-4PM SUN</span></p>
 					<p>Our friendly sales people will help you find treasures in the stacks without sales tax. Need a present? Our gift certificates are available in $5.00 denominations. You can find more information about the <a href="#mainsaleinfo" alt="go to main sale info">Main sale</a>, <a href="#childrensaleinfo" alt="go to children's sale info">Children's sale</a>, and <a href="#bargainsaleinfo" alt="go to bargain sale info">Bargain sale</a> by clicking the links</p>
@@ -104,7 +104,7 @@ Our volunteers conduct monthly and online sales of books and other media donated
 		<footer id="page-footer">
 			<nav>
 				<ul> <!--can add classes here later-->
-					<li><a href="#page-title" alt="go to the top of the page">Home</a></li>
+					<li><a href="#obcpage-title" alt="go to the top of the page">Home</a></li>
 					<li><a href="finalproject.html" alt="go to the Whippoorwill Book Club main page">WBC Main Page</a></li>
 					<li><a href="https://www.indiantrailslibrary.org/" alt="go to the Indian Trails Public Library District website">Library (ITPLD)</a></li>
 					<li><a href="https://www.kirkusreviews.com/" alt="go to the Kirkus Reviews website">Kirkus Reviews</a></li>
