--- a/obocpage.html
+++ b/obocpage.html
@@ -51,49 +51,32 @@
     		</article>
 				<article>
 				<!--<p>-->
-					<!--The first book content-->
-						<h1 id="circe">Circe (Madeline Miller, 2018)</h1>
-						<p>“Monsters are a boon for gods. Imagine all the prayers.” So says Circe, a sly, petulant, and finally commanding voice that narrates the entirety of Miller’s dazzling second novel. The writer returns to Homer, the wellspring that led her to an Orange Prize for The Song of Achilles (2012). This time, she dips into The Odyssey for the legend of Circe, a nymph who turns Odysseus’ crew of men into pigs. Readers will relish following the puzzle of this unpromising daughter of the sun god Helios. It takes banishment to the island Aeaea for Circe to sense her calling as a sorceress: “I stepped into those woods and my life began.” This lonely, scorned figure learns herbs and potions, surrounds herself with lions, and, in a heart-stopping chapter, outwits the monster Scylla to propel Daedalus and his boat to safety. She makes lovers of Hermes and then two mortal men. Circe’s fascination with mortals becomes the book’s marrow and delivers its thrilling ending. All the while, the supernatural sits intriguingly alongside “the tonic of ordinary things.”
-							<figure class="CirceDustJacket">
-								<img alt="Dust jacket image for Circe, stylized Greek female face in gold and black." src="images/CirceIMG.png">
-							</figure>
-						</p>
-						<p>--<a href="https://www.kirkusreviews.com/book-reviews/madeline-miller/circe/" target="_blank">Kirkus Reviews</a></p>
-					<!--The second book content-->
-						<h2 id="kavandclay">The Amazing Adventures of Kavalier and Clay (Michael Chabon, 2000)</h2>
+					<!--Hello Beautiful content-->
+						<h2 id="hellobeautiful">Hello Beautiful (Ann Napolitano, 2024)</h2>
 						<figure class="KavClayDustJacket">
 							<img alt="Dust jacket image for Kavalier and Clay, comic book style New York City." src="images/KavAndClayIMG.png">
 						</figure>
-						<p>Czech immigrant Josef Kavalier arrives in Brooklyn in 1939 to stay with his aunt’s family, and sparks are immediately struck between “Joe” (a talented draftsman) and his cousin Sammy Klayman, a hustling go-getter (and hopeful “serious writer”) who dreams of success in the burgeoning new field of newspaper comic strips. The pair dream up, and draw the exploits of, such superheroes as “the Escapist” (a figure resembling “Houdini, but mixed with Robin Hood and a little bit of Albert Schweitzer,” whose sources are revealed in extensive flashbacks that also detail Joe’s training as a magician and escape artist)—and “Kavalier & Clay” become rich and famous. But the shadow of Hitler, and later the pressure of change and political accusation, overtake these two magnificently imagined characters.  The story climaxes unforgettably—and surprisingly—atop the Empire State Building, and its lengthy dénouement (a virtuoso piece of sustained storytelling) ends in a gratifying resolution of the deceptions and disappearances that have become second nature (as well as heavy burdens) to Joe, and a simultaneous “unmasking” and liberation that release Sammy from the storybook world they had made together.</p>
+						<p>text about the book here.</p>
 						<p>--<a href="https://https://www.kirkusreviews.com/book-reviews/michael-chabon/the-amazing-adventures-of-kavalier-and-clay/" target="_blank">Kirkus Reviews</a></p>
-					<!--The third book content-->
-						<h3 id="lessons">Lessons in Chemistry (Bonnie Garmus, 2022)</h3>
+					<!--Little Women content-->
+						<h3 id="littlewomen">Little Women (Louisa May Alcott, date)</h3>
 						<figure class="LessonsDustJacket">
 							<img alt="Dust jacket image for Lessons in Chemistry, cartoon female scientist face on orange background." src="images/LessonsInChemistry.png">
 						</figure>
 						<p>At the dawn of the 1960s, Elizabeth Zott finds herself in an unexpected position. She's the star of a television program called Supper at Six that has taken American housewives by storm, but it's certainly not what the crass station head envisions: “ 'Meaningful?' Phil snapped. 'What are you? Amish? As for nutritious: no. You’re killing the show before it even gets started.’” Elizabeth is a chemist, recently forced to leave the lab where she was doing important research due to an out-of-wedlock pregnancy. Now she's reduced to explaining things like when to put the steak in the pan. If ever a woman was capable of running her own life, it's Elizabeth. But because it's the 1950s, then the '60s, men have their sweaty paws all over both her successes and failures. On the plus side, there's Calvin Evans, world-famous chemist, love of her life, and father of her child; also Walter Pine, her friend who works in television; and a journalist who at least tries to do the right thing. This is the kind of book that has a long-buried secret at a corrupt orphanage with a mysterious benefactor as well as an extremely intelligent dog named Six-Thirty, recently retired from the military. Garmus' energetic debut also features an invigorating subplot about rowing.</p>
 						<p>--<a href="https://www.kirkusreviews.com/book-reviews/bonnie-garmus/lessons-chemistry/" target="_blank">Kirkus Reviews</a></p>
-					<!--The fourth book content
-						<h4 id="wolfhall">Wolf Hall (Hillary Mantel, date)</h4>
-						<figure class="WolfHallDustJacket">
-							<img alt="Dust jacket image for Wolf Hall, bold white lettering on red background." src="images/WolfHall.png">
-						</figure>
-						<p>Text about the third book</p>
-						<p>--<a href="https://www.kirkusreviews.com/book-reviews/madeline-miller/circe/" target="_blank">Kirkus Reviews</a></p>-->
 					<p>Our Main sale offers adult books, CDs, DVDs, records, and magazines. Hardcover books start at $1.00 and paperback books start at $0.50. Main sale hours are <span style="color: blue;">11AM-4PM SAT & 1PM-4PM SUN</span>. The Main room faces East Charleston Rd: find it on our <a href="#roommap" alt="go to map of sale rooms">Sale room map</a>. Check out our <a href="#bargainsaleinfo" alt="go to bargain sale info">Bargain sale</a> for even better deals!</p>
-					<h4 id="LWMovies">Film Versions of Little Women</h4>
-					<p>Did you know there are n film versions of Little Women? Here's a list and you can find many of them on DVD and/or Bluray at the library</p>
-          <ul>
-						<li><a alt="Little Women, a film directed by F. Scott Fitzgerald in 1925">Little Women (director, date)</a></li>
-						<li><a alt="Little Women, a film directed by Audrey Niffenegger in 2003">Little Women (director, date)</a></li>
-						<li><a alt="Little Women, a film directed by Louis de Bernieris in 1994">Little Women (director, date)</a></li>
-						<li><a alt="Little Women, a film directed by Amor Towles in 2016">Little Women (director, date)</a></li>
-						<li><a alt="Station Eleven, a novel written by Emily St. John Mandel in 2014">Station Eleven (Emily St. John Mandel, 2014)</a></li>
-						<li><a alt="Lincoln in the Bardo, a novel written by George Saunders in 2017">Lincoln in the Bardo (George Saunders, 2017)</a></li>
-						<li><a alt="Middlemarch, a novel written by George Eliot in 1872">Middlemarch (George Eliot, 1872)</a></li>
-						<li><a alt="The Known World, a novel written by Edward P. Jones in 2003">The Known World (Edward P. Jones, 2003)</a></li>
-						<li><a alt="The Worst Hard Time, a non-fiction work written by Timothy Egan in 2006">The Worst Hard Time (Timothy Egan, 2006)</a></li>
-					</ul> 
+					<!--Films content-->
+						<h4 id="LWMovies">Little Women in Film</h4>
+						<p>Did you know there are multiple film versions of Little Women? You can find many of them on DVD and/or Bluray at the library. Here's a list</p>
+	          			<ul>
+							<li><a alt="Little Women, a film directed by Greta Gerwig released in 2019.">Little Women (Greta Gerwig, 2019)</a></li>
+				  			<li><a alt="Little Women, a BBC mini-series directed by Vanessa Caswill released in 2017.">Little Women (mini-series) (Vanessa Caswill, 2017)</a></li>
+							<li><a alt="Little Women, a film directed by Gillian Armstrong released in 1994.">Little Women (Gillian Armstrong, 1994)</a></li>
+							<li><a alt="Little Women, a film directed by someone in 1949">Little Women (director, 1949)</a></li>
+							<li><a alt="Little Women, a film directed by George Cukor in 1933">Little Women (George Cukor, 1933)</a></li>
+							<li><a alt="Little Women, two silent films released in 1917 and 1918">Little Women (silent films, 1917 and 1918)</a></li>
+						</ul> 
 					<p>List goes here are <span style="color: blue;">10AM-4PM SAT & 1PM-4PM SUN</span>. <i>Note that the Children's sale opens 1 hour before the Main sale on Saturday, so be early for the best selection</i></p>
 					<p>The Children's sale room faces the Greendell School and San Antonio Rd: find it on our <a href="#roommap" alt="go to map of sale rooms">Sale room map</a>. While you're shopping early on SAT, you need to limit your selections to 12 items: just bring them to the cashiers to hold until you are ready to pay for all of your purchases. Not sure about what to buy for that grandchild or teacher? Our gift certificates (available in $5.00 denominations) make great gifts! Check out our <a href="#bargainsaleinfo" alt="go to bargain sale info">Bargain sale</a> for even better deals!</p>
 					<p>Friends of the Palo Alto Library (FOPAL) is a member-supported 501(c)(3) non-profit organization dedicated to supporting the <a href="https://library.cityofpaloalto.org/" target="_blank">Palo Alto City Library</a> and its users through volunteerism, book sales, and advocacy. Established in 1938, FOPAL has grown with the library community it serves.
