--- a/finalproject.html
+++ b/finalproject.html
@@ -18,10 +18,11 @@
 		<main id="main-content">
     		<article>
       			<header>
-					<div class="header">
+					<h1 id="mainpage-title"><img src="images/LogoWBCReduced.PNG" alt="Book club logo simple bird in a circle"/>The Whippoorwill Book Club</h1>
+					<!--<div class="header">
   						<h1 id="mainpage-title">The Whippoorwill Book Club</h1>
 						<img src="images/LogoWBCReduced.PNG" alt="Book club logo simple bird in a circle" />
-					</div>
+					</div>-->
 					<!--<figure class="LogoWBC">
 						<img alt="Whippoorwill logo for the book club." src="images/LogoWBCReduced.PNG">
 						<!--<img alt="Whippoorwill logo for the book club." src="images/LogoWhippoorwillBookClub.png">
