--- a/finalproject.html
+++ b/finalproject.html
@@ -28,7 +28,7 @@
 						<!--<img alt="Whippoorwill logo for the book club." src="images/LogoWhippoorwillBookClub.png">
 					</figure>
 					<h1 id="mainpage-title">The Whippoorwill Book Club</h1>-->
-					<h2 id="page-subtitle">Reading, conversation, and commraderie at the library</h2>
+					<h2 id="page-subtitle">Reading, conversation, and community at the library</h2>
 					<!--<p>Posted by: WBC</p>-->
 					<nav>
 						<ul class="menu-items">
