--- a/obocpage.html
+++ b/obocpage.html
@@ -18,7 +18,7 @@
 		<main id="main-content">
     		<article>
       			<header>
-					<h1 id="obcpage-title">Whippoorwill Book Club One Book One Community</h1>
+					<h1 id="obocpage-title">Whippoorwill Book Club One Book One Community</h1>
 					<h2 id="page-subtitle">Our Dedication to Hello, Beautiful!</h2>
 					<!--<p>Posted by: WBC</p>-->
 					<nav>
@@ -87,7 +87,7 @@ Our volunteers conduct monthly and online sales of books and other media donated
 		<footer id="page-footer">
 			<nav>
 				<ul> <!--can add classes here later-->
-					<li><a href="#obcpage-title" alt="go to the top of the page">Home</a></li>
+					<li><a href="#obocpage-title" alt="go to the top of the page">Home</a></li>
 					<li><a href="finalproject.html" alt="go to the Whippoorwill Book Club main page">WBC Main Page</a></li>
 					<li><a href="https://www.indiantrailslibrary.org/" alt="go to the Indian Trails Public Library District website">Library (ITPLD)</a></li>
 					<li><a href="https://www.kirkusreviews.com/" alt="go to the Kirkus Reviews website">Kirkus Reviews</a></li>
