--- a/finalproject.html
+++ b/finalproject.html
@@ -42,7 +42,7 @@
 								<a href="greatesthitspage.html" alt="go to the greatest hits page">Greatest hits</a>
 							</li>
 							<li class="menu-items-opt">
-								<a href="obocpage.html" alt="go to the one book one community page">One Book</a>
+								<a href="obocpage.html" alt="go to the one book one community page">One book</a>
 							</li>
 							<li class="menu-items-opt">
 								<a href="https://www.indiantrailslibrary.org/" alt="go to the library website">Library</a>
