--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -27,13 +27,13 @@
 								<a href="#aboutpage-title" alt="refresh the page">Home</a>
 							</li>
 							<li class="menu-items-opt">
-								<a href="finalproject.html" alt="go to the Whippoorwill Book Club main page">Book Club Main</a>
+								<a href="finalproject.html" alt="go to the Whippoorwill Book Club main page">Book club main</a>
 							</li>
 							<li class="menu-items-opt">
 								<a href="greatesthitspage.html" alt="go to the greatest hits page">Greatest hits</a>
 							</li>
 							<li class="menu-items-opt">
-								<a href="obocpage.html" alt="go to the one book one community page">One Book</a>
+								<a href="obocpage.html" alt="go to the one book one community page">One book</a>
 							</li>
 							<li class="menu-items-opt">
 								<a href="https://www.indiantrailslibrary.org/" alt="go to the library website">Library</a>
