--- a/greatesthitspage.html
+++ b/greatesthitspage.html
@@ -27,13 +27,13 @@
 								<a href="#greatestpage-title" alt="refresh the page">Home</a>
 							</li>
 							<li class="menu-items-opt">
-								<a href="finalproject.html" alt="go to the Whippoorwill Book Club main page">Book Club Main</a>
+								<a href="finalproject.html" alt="go to the Whippoorwill Book Club main page">Book club main</a>
 							</li>
 							<li class="menu-items-opt">
 								<a href="aboutuspage.html" alt="go to the about us page">About us</a>
 							</li>
 							<li class="menu-items-opt">
-								<a href="obocpage.html" alt="go to the one book one community page">One Book</a>
+								<a href="obocpage.html" alt="go to the one book one community page">One book</a>
 							</li>
 							<li class="menu-items-opt">
 								<a href="https://www.indiantrailslibrary.org/" alt="go to the library website">Library</a>
@@ -104,7 +104,7 @@ Our volunteers conduct monthly and online sales of books and other media donated
 			<nav>
 				<ul> <!--can add classes here later-->
 					<li><a href="#greatestpage-title" alt="go to the top of the page">Home</a></li>
-					<li><a href="finalproject.html" alt="go to the Whippoorwill Book Club main page">WBC Main Page</a></li>
+					<li><a href="finalproject.html" alt="go to the Whippoorwill Book Club main page">WBC main page</a></li>
 					<li><a href="https://www.indiantrailslibrary.org/" alt="go to the Indian Trails Public Library District website">Library (ITPLD)</a></li>
 					<li><a href="https://www.kirkusreviews.com/" alt="go to the Kirkus Reviews website">Kirkus Reviews</a></li>
 				</ul>
