--- a/obocpage.html
+++ b/obocpage.html
@@ -18,8 +18,8 @@
 		<main id="main-content">
     		<article>
       			<header>
-					<h1 id="obocpage-title">Whippoorwill Book Club One Book One Community</h1>
-					<h2 id="page-subtitle">Our Dedication to Hello, Beautiful!</h2>
+					<h1 id="obocpage-title">Whippoorwill Book Club and One Book One Community</h1>
+					<h2 id="page-subtitle">Our Celebration of Hello Beautiful!</h2>
 					<!--<p>Posted by: WBC</p>-->
 					<nav>
 						<ul class="menu-items">
@@ -57,9 +57,6 @@
 						<p>--<a href="https://www.kirkusreviews.com/book-reviews/ann-napolitano/hello-beautiful/" target="_blank">Kirkus Reviews</a></p>
 					<!--Little Women content-->
 						<h3 id="littlewomen">Little Women (Louisa May Alcott, date)</h3>
-						<figure class="LessonsDustJacket">
-							<img alt="Dust jacket image for Lessons in Chemistry, cartoon female scientist face on orange background." src="images/LessonsInChemistry.png">
-						</figure>
 						<p>Little Women tells the story of the four March sisters—responsible Meg, independent Jo, gentle Beth, and artistic Amy—as they come of age during the American Civil War. Despite financial hardship, the girls navigate friendship, family struggles, budding ambitions, and first loves. Jo strives to become a writer, Meg dreams of a stable home life, Beth’s kindness shapes the family, and Amy matures into a confident young woman.</p>
 						<p>As the sisters grow into adulthood, they face loss, changing relationships, and the realization that their paths in life will be different but equally meaningful.</p>	
 						<p>Major themes include the importance of family and sisterhood, the pursuit of personal identity, the tension between societal expectations and individual ambition—especially for women—and the idea that love can take many forms beyond romance.</p>
