--- a/obocpage.html
+++ b/obocpage.html
@@ -19,7 +19,7 @@
     		<article>
       			<header>
 					<h1 id="obocpage-title">Whippoorwill Book Club and One Book One Community</h1>
-					<h2 id="page-subtitle">Our Celebration of Hello Beautiful!</h2>
+					<h2 id="page-subtitle">Our Celebration of <span class="booktitleanimation">Hello Beautiful</span></h2>
 					<!--<p>Posted by: WBC</p>-->
 					<nav>
 						<ul class="menu-items">
